After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682564 - keyboard backlight toggle functions incorrectly
keyboard backlight toggle functions incorrectly
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: media-keys
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-23 18:40 UTC by Steve Magoun
Modified: 2012-09-17 16:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch against git master (1.66 KB, patch)
2012-08-23 18:48 UTC, Steve Magoun
committed Details | Review

Description Steve Magoun 2012-08-23 18:40:47 UTC
The keyboard backlight toggle functionality in g-s-d is not hooked up correctly - pressing the 'toggle' key on my keyboard causes g-s-d to decrease the keyboard backlight brightness rather than toggling it on/off.

The underlying events are working fine; udev emits 'kbdillumtoggle', for example. The problem is in gsd-media-keys-manager's do_keyboard_brightness_action(), which has not been updated to pass KEYBOARD_BRIGHTNESS_TOGGLE_KEY events to the power plugin.
Comment 1 Steve Magoun 2012-08-23 18:48:58 UTC
Created attachment 222253 [details] [review]
Patch against git master

Patch tested on g-s-d 3.4.2 in Ubuntu on a MacbookPro 3,1. The patch does uncover some bugs in the power plugin - looks like the power plugin can get confused if you toggle the backlight when it's set to mix or max brightness. Those do not appear to be side effects of this patch.
Comment 2 Bastien Nocera 2012-09-17 16:48:11 UTC
Committed with a few changes.
Comment 3 Bastien Nocera 2012-09-17 16:49:33 UTC
(In reply to comment #1)
> Patch tested on g-s-d 3.4.2 in Ubuntu on a MacbookPro 3,1. The patch does
> uncover some bugs in the power plugin - looks like the power plugin can get
> confused if you toggle the backlight when it's set to mix or max brightness.
> Those do not appear to be side effects of this patch.

Please file those bugs separately.