media-keys: Handle "toggle brightness" events

Toggle would lower the brightness, as:
KEYBOARD_BRIGHTNESS_TOGGLE_KEY != KEYBOARD_BRIGHTNESS_TOGGLE_KEY

https://bugzilla.gnome.org/show_bug.cgi?id=682564